[gd_scene load_steps=7 format=3 uid="uid://c4dv8m3fouu5i"]

[ext_resource type="PackedScene" uid="uid://cp8spgna5jcpp" path="res://trap_base.tscn" id="1_x4666"]
[ext_resource type="Script" path="res://arrow.gd" id="2_7yc7c"]
[ext_resource type="PackedScene" uid="uid://dxqay8av5scjv" path="res://animations/Arrow.gltf" id="3_d7dgc"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4s1j4"]

[sub_resource type="BoxMesh" id="BoxMesh_pikjn"]
size = Vector3(3, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_8x2g4"]
size = Vector3(21.6577, 13.762, 1)

[node name="arrow" instance=ExtResource("1_x4666")]
script = ExtResource("2_7yc7c")
range = Vector3(3, 1, 1)
damage_per_tick = 5
tick_interval = 0.5

[node name="Arrow2" parent="." index="0" instance=ExtResource("3_d7dgc")]
transform = Transform3D(-2.25114e-08, 0, 0.515, 0, 0.515, 0, -0.515, 0, -2.25114e-08, 0, 0, 0)

[node name="baseZone" parent="." index="1"]
visible = false

[node name="dangerZone" type="MeshInstance3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0.5, 0)
material_override = SubResource("StandardMaterial3D_4s1j4")
transparency = 0.65
mesh = SubResource("BoxMesh_pikjn")

[node name="Area3D" type="Area3D" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0.5, 0)
collision_layer = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.612061, -0.550415, 0)
shape = SubResource("BoxShape3D_8x2g4")

[node name="Timer" type="Timer" parent="." index="4"]

[connection signal="body_entered" from="Area3D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_body_exited"]
